# Vari-Tensor

./: CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py  varitensor.h
include/varitensor/: Tensor.h  pre_defined.h  pretty_print.h
include/varitensor/impl/: ExpressionIteratorBase.h  Index.h  LinkedOp.h  LinkedOp_decl.h  LinkedOp_impl.h  Preparatory.h  ProductOp.h  SummedOp_decl.h  SummedOp_impl.h  View.h  View_decl.h  bulk.h  common.h  deny.h  pre_defined.h  visitors.h
src/: Tensor.cxx  pretty_print.cxx
src/impl/: ExpressionIteratorBase.cxx  Index.cxx  LinkedOp.cxx  Preparatory.cxx  ProductOp.cxx  View.cxx  bulk.cxx  pre_defined.cxx
test/: TestAdvanced.h  TestAssignmentOperations.h  TestBulk.h  TestConstruction.h  TestIndexing.h  TestInformation.h  TestLinearOperators.h  TestManipulation.h  TestTensorAddition.h  TestTensorMultiplication.h  run_tests.cxx
